WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
318201
[Quirks] mms.pinduoduo.com shows Safari a "your browser is not Chrome" interstitial
https://bugs.webkit.org/show_bug.cgi?id=318201
Summary
[Quirks] mms.pinduoduo.com shows Safari a "your browser is not Chrome" inters...
Karl Dubost
Reported
2026-06-30 01:49:08 PDT
The Pinduoduo merchant back-office (拼多多商家后台) at
https://mms.pinduoduo.com/
redirects to its login page
https://mms.pinduoduo.com/login/?redirectUrl=https%3A%2F%2Fmms.pinduoduo.com%2F
and overlays a modal interstitial in Safari: "我们检测到您的浏览器不是chrome浏览器,可能存在安全风险,或导致页面无法 正常显示,为了不影响您正常使用,建议您使用chrome浏览器打开网站!" [下载最新版Chrome] [已安装去使用] ("We detected your browser is not Chrome. there may be security risks, or the page may not display correctly. We recommend opening the site in Chrome.") The modal does not appear in Chrome. The login QR/account form renders behind the modal, so the page is otherwise functional. this is purely a user-agent gate against non-Chrome browsers. Steps to reproduce: 1. Open Safari. 2. Navigate to
https://mms.pinduoduo.com/
3. Observe the redirect to the login page and the "not Chrome" modal. Expected: the login page is usable without a "use Chrome" interstitial. Actual: a modal blocks the page recommending Chrome.
Attachments
Add attachment
proposed patch, testcase, etc.
Karl Dubost
Comment 1
2026-06-30 01:49:48 PDT
<
rdar://180551491
>
Karl Dubost
Comment 2
2026-06-30 02:09:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/68302
EWS
Comment 3
2026-07-01 15:31:56 PDT
Committed
316336@main
(988c6a663e9a): <
https://commits.webkit.org/316336@main
> Reviewed commits have been landed. Closing PR #68302 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug