[Quirks] mms.pinduoduo.com shows Safari a "your browser is not Chrome" interstitial https://bugs.webkit.org/show_bug.cgi?id=318201 rdar://180551491

Reviewed by Brent Fulgham.

The Pinduoduo merchant back-office at mms.pinduoduo.com parses
navigator.userAgent with ua-parser-js and overlays a "your browser is not
Chrome" modal whenever the detected browser name is outside {Chrome, Edge, IE},
blocking Safari. The check reads the user-agent string (not
navigator.userAgentData), and ua-parser-js evaluates its generic chrome/<v>
rule before its Safari rule, so a UA carrying a Chrome token is reported as
Chrome and the gate passes.

Add a host-scoped entry to needsCustomUserAgentOverride() that splices a Chrome
token into Safari's user agent preserving Safari's identity tokens.
Scoped to the host mms.pinduoduo.com rather than the pinduoduo.com
registrable domain so the consumer storefront and other subdomains are
unaffected.

* Source/WebCore/page/Quirks.cpp:

Canonical link: https://commits.webkit.org/316336@main